WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172604
Regression(
r215686
): Videos sometimes do not load in iBooks
https://bugs.webkit.org/show_bug.cgi?id=172604
Summary
Regression(r215686): Videos sometimes do not load in iBooks
Chris Dumez
Reported
2017-05-25 12:57:59 PDT
Videos sometimes do not load in iBooks after
r215686
.
Attachments
Patch
(3.14 KB, patch)
2017-05-25 14:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-05-25 12:58:17 PDT
<
rdar://problem/32003717
>
Chris Dumez
Comment 2
2017-05-25 14:37:34 PDT
Created
attachment 311294
[details]
Patch
Geoffrey Garen
Comment 3
2017-05-25 14:43:10 PDT
Comment on
attachment 311294
[details]
Patch r=me This seems like another case where SharedBuffer could offer a helper function to encapsulate behavior and avoid bugs. In this case, I would offer a function that returned a boolean indicating whether it satisfied the full read request.
WebKit Commit Bot
Comment 4
2017-05-25 15:20:17 PDT
Comment on
attachment 311294
[details]
Patch Clearing flags on attachment: 311294 Committed
r217453
: <
http://trac.webkit.org/changeset/217453
>
WebKit Commit Bot
Comment 5
2017-05-25 15:20:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug